--- a/huddle-landing-pages/style.css
+++ b/huddle-landing-pages/style.css
@@ -49,5 +49,15 @@ header{
 }
 
 .heading, .subtext, button{
-    margin: 1.5rem;
+    margin: 0.7rem;
+}
+
+button{
+    padding: 0.9rem 3.1rem;
+    border-radius: 2rem;
+    font-size: 17px;
+    color: hsl(300, 69%, 71%);
+    background-color: white;
+    border: white;
+    box-shadow: 5px 3px 20px 1px rgba(0, 0, 0,0.8);
 }
