--- a/news-homepage-main/style.css
+++ b/news-homepage-main/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Open+Sans&family=Poppins&family=Roboto&display=swap');
 
-
+/* General */
 *{
     margin: 0;
     padding: 0;
@@ -11,7 +11,7 @@ body{
     font-family: 'Inter', sans-serif;
     background-color: hsl(36, 100%, 99%);
 }
-
+/* Header-Nav */
 header{
     margin:  2rem 7.5rem;
 }
@@ -31,14 +31,14 @@ header nav {
 #nav-options li{
     color: hsl(236, 13%, 42%);
 }
-
+/* Main-content */
 main{
     margin: 2rem 7.5rem;
     display: grid;
     grid-template-columns: 2.5fr 1.2fr;
     gap: 4rem;
 }
-
+/* Showcase-section(left-grid) */
 #showcase-section{
     display: grid;
 }
@@ -72,7 +72,7 @@ button{
     box-shadow: 0 0 7px;
 }
     
-
+/* Aside Quick Link (right grid) */
 #aside-info{
     border: solid black 2px;
     display: flex;
@@ -83,7 +83,7 @@ button{
     background-color: hsl(240, 100%, 5%);
 }
 
-h2{
+#aside-info h2{
     font-weight: 800;
     font-size: 32px;
     color: hsl(35, 77%, 62%);
@@ -100,10 +100,45 @@ h2{
     color: hsl(233, 8%, 79%);
 }
 
+/* Options quick link (lower-grid) */
 #options{
     grid-column: 1/3;
-    grid-row: 2/3;
+    display: flex;
+    gap: 2rem;
+}
+.option-info{
     display: grid;
-    grid-template-rows: 1fr 2fr 1fr;
-    align-items: start;    
+    grid-template-columns: 1fr 2fr;
+}
+.option-info img{
+    width: 89%;
+}
+.info-text{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+.info-text h2{
+    color: hsl(233, 8%, 79%);
+}
+.info-text .bold-text{
+    font-weight: bold;
+    color: hsl(240, 100%, 5%);
+}
+.info-text p{
+    color: hsl(236, 13%, 42%);
+}
+
+/* hovers */
+#nav-options li:hover, .info-text .bold-text:hover{
+    color: hsl(5, 85%, 63%);
+    cursor: pointer;
+}
+button:hover{
+    background-color: hsl(240, 100%, 5%);
+    border-color: hsl(240, 100%, 5%);
+    cursor: pointer;
+}
+.article h3:hover{
+    color:hsl(35, 77%, 62%);cursor: pointer;
 }
