added various functionality to button to enable and disable the selection and submit the selction made

--- a/interactive-rating-component-main/style.css
+++ b/interactive-rating-component-main/style.css
@@ -75,8 +75,8 @@ body{
     border-color:  hsl(25, 97%, 53%);
     color: white;
 }
-.thanks-show{
-    display: flex;
+.no-show{
+    display: none;
 }
 
 /* thank you card */
