--- a/faq-accordion-card-main/style.css
+++ b/faq-accordion-card-main/style.css
@@ -11,7 +11,9 @@ body{
     background-repeat: no-repeat;
     font-family: "Kumbh Sans", sans-serif;
     width: 100%;
+    min-height: 100vh;
 }
+.mobile{display: none;}
 .container{
     display: flex;
     justify-content: space-between;
@@ -30,9 +32,9 @@ body{
     align-items: center;
 }
 .fg-img{
-    position: absolute;
-    top: 18rem;
-    left: 9rem; 
+    position: relative;
+    top: 0.3rem;
+    left: -35.1rem; 
     z-index: 2;
 }
 .bg-img{
@@ -41,9 +43,8 @@ body{
 }
 #faq-section{
     align-self: center;
-    padding: 3rem 3rem 3rem 0;
+    padding: 2rem 3rem 2rem 0;
     width: 70%;
-    min-height: 70vh;
 }
 #faq-section h1{font-weight: bolder;}
 .questions{
@@ -77,4 +78,55 @@ body{
     cursor: pointer;
 }
 
+/* responsiveness */
+@media screen and (max-width: 1145px) {
+    .container{
+        width: 81%;
+    }
+}
+@media screen and (max-width: 976px) {
+    .container{
+        width: 90%;
+        gap: 2rem;
+    }
+    #faq-section{
+        width: 50%;
+        padding: 2.1rem 2.1rem 2.1rem 0;
+        min-height: 50vh;
+        justify-self: flex-end;
+    }
+}
 
+@media screen and (max-width: 820px) {
+    .container{
+        flex-direction: column;
+        justify-content: flex-start;
+        margin: 12rem auto;
+        gap: 0.9rem;
+        padding-bottom: 3rem;
+    }
+    #img-container{
+        display: flex;
+        background-image: url(images/bg-pattern-mobile.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 100%;
+        height: 21vh;
+    }
+    .desktop, .fg-img{display: none;}
+    .mobile{
+        display: block;
+        position: relative;
+        width: 100%;
+        top: -4.5rem;
+        left: 1.2rem;
+    }
+    #faq-section{
+        padding: 0 0 0 0;
+        width: 89%;
+        margin: 1rem auto;
+    }
+    #faq-section h1{
+        text-align: center;
+    }
+}
