--- a/calculator-app-main/style.css
+++ b/calculator-app-main/style.css
@@ -148,3 +148,19 @@ body, .btn
     box-shadow: 0px 3.6px 0 var(--toggle-and-ans-key-shadow);
     color: var(--text-ans);
 }
+
+
+/* active states */
+#calc-theme:hover, #ans-btn:hover{
+    filter: brightness(1.75);
+    cursor: pointer;
+}
+#reset-btn:hover, #del-btn:hover{
+    filter: brightness(1.7);
+    cursor: pointer;
+}
+.btn:hover{
+    filter: brightness(1.6);
+    cursor: pointer;
+}
+
